--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
