--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
           - v1-dependencies-
       - run: mvn dependency:go-offline
       - run: mvn integration-test
+      - store_test_results:
+          path: target/surefire-reports
       - save_cache:
           paths:
             - ~/.m2
